[package]
name = "drv-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde-hex = "0.1.0"
pelite = "0.10.0"
sha2 = "0.10.7"
structopt = "0.3.26"
log = "0.4.19"
pretty_env_logger = "0.5.0"